--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-static-top">
+  <div class="navbar navbar-default navbar-static-top">
 	  <div class="container">
 	    <div class="navbar-header">
 	      
