--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,10 +1,17 @@
 <h1>CDL Practice Tests</h1>
 
 <% @tests.each do |test| %>
-  <p><%= test.name %> - <%= test.questions.size %> Questions - <%= link_to "Start the test", test_question_path(test.id, test.questions.first.id) %><br>
+  <p><%= test.name %> - <%= test.questions.size %> Questions - <%= link_to "Start the test", test_question_path(test.id, test.questions.first.id), class: "clear-score" %><br>
   <%= link_to 'Edit', edit_test_path(test) %> | <%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %></p>
 <% end %>
 
 <br>
 
-<%= link_to 'New Quiz', new_test_path %>
+<%= link_to 'New Quiz', new_test_path, data: { no_turbolink: true } %>
+
+<script>
+// Clear score before starting new test
+$(".clear-score").click(function() {
+    sessionStorage.clear();
+  })
+</script>
