--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -5,20 +5,14 @@
 	Your current place: <%= @attempt.place %>
 <% elsif @attempt.completed %>
 	<h3>Your score was: <%= @attempt.score %> correct out of <%= @attempt.test.questions.count %> questions</h3>
-	<p><%= link_to "Try this test again", test_question_path(@attempt.test.id, @attempt.test.questions.first.id), id: "clear-score" %></p>
+	<p><%= link_to "Try this test again", test_question_path(@attempt.test.id, @attempt.test.questions.first.id), class: "clear-score" %></p>
 <% else %>
   <p>There was a problem.</p>
 <% end %>
 
 <script>
-  // Start the test over - clears the session storage score
-	$("#clear-score").click(function() {
-		sessionStorage.clear();
-	})
 	// Resume the test
   $("#resume-test").click(function() {
-  	// Set attempt_id session storage
-  	sessionStorage.setItem("attempt_id", "<%= @attempt.id %>");
   	// Set current score
   	sessionStorage.setItem("score", "<%= @attempt.score %>");
   })
