--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
 	      <ul class="nav navbar-nav navbar-right">
 	      	<% if user_signed_in? %>
 	      	  <li class="dropdown">
-		          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Welcome back, <%= current_user.name %> <span class="caret"></span></a>
+		          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Welcome back <span class="caret"></span></a>
 		          <ul class="dropdown-menu" aria-labelledby="download">
-	              <li><%= link_to 'My Profile', user_path(current_user) %></li>
+	              <%#= link_to 'My Profile', user_path(current_user) %>
 		            <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
 		            <li class="divider"></li>
 		            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
