--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -7,11 +7,4 @@
 
 <br>
 
-<%= link_to 'New Quiz', new_test_path, data: { no_turbolink: true } %>
-
-<script>
-// Clear score before starting new test
-$(".clear-score").click(function() {
-    sessionStorage.clear();
-  })
-</script>
+<%= link_to 'New Quiz', new_test_path, data: { no_turbolink: true }, class: "btn btn-success" %>
