--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -7,4 +7,4 @@
 
 <br>
 
-<%= link_to 'New Quiz', new_test_path, data: { no_turbolink: true }, class: "btn btn-success" %>
+<%= link_to 'New Test', new_test_path, data: { no_turbolink: true }, class: "btn btn-success" %>
