--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,11 @@
 	        	</li>
 	        	
 	        <% else %>
-	          
-		        <li><%= link_to "Create Account", new_user_registration_path %></li>
-		        <li><%= link_to "Log In", new_user_session_path %></li>
-		        
+	            <%= link_to "Get it Now", order_path, class: "btn btn-danger navbar-btn" %>
+	          <!--
+		        <li><%#= link_to "Create Account", new_user_registration_path %></li>
+		        <li><%#= link_to "Log In", new_user_session_path %></li>
+		        -->
 		      <% end %>
 	      </ul>
 
