--- a/app/views/pages/order.html.erb
+++ b/app/views/pages/order.html.erb
@@ -1,11 +1,22 @@
 <h1>Order The CDL Package Now</h1>
-
-<form name="_xclick" action="https://developer.paypal.com/us/cgi-bin/" method="post">
+<!--
+<form name="_xclick" action="http://sandbox.paypal.com/cgi-bin/webscr" method="post">
   <input type="hidden" name="cmd" value="_xclick">
   <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
   <input type="hidden" name="currency_code" value="USD">
   <input type="hidden" name="item_name" value="CDL Package">
   <input type="hidden" name="amount" value="47">
+  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success">
+  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
+  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
+</form>
+-->
+<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="item_name" value="CDL Basic Package">
+  <input type="hidden" name="amount" value="27">
   <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success">
   <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
   <input type="submit" class="btn btn-success btn-lg" value="Order Now">
