--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome</h1>
 
-<div class="col-md-4">
+<div class="col-md-6 col-md-offset-3">
 	<%= render partial: "devise/registrations/form" %>
 </div>
