Add signup packages

--- a/app/views/pages/order.html.erb
+++ b/app/views/pages/order.html.erb
@@ -1,23 +1,63 @@
-<h1>Order The CDL Package Now</h1>
-<!--
-<form name="_xclick" action="http://sandbox.paypal.com/cgi-bin/webscr" method="post">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
-  <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="item_name" value="CDL Package">
-  <input type="hidden" name="amount" value="47">
-  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success">
-  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
-  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
-</form>
--->
-<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
-  <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="item_name" value="CDL Basic Package">
-  <input type="hidden" name="amount" value="27">
-  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success">
-  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
-  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
-</form>
+<row>
+	<h1>Order Your CDL Study Guide Package Now</h1>
+
+	<div class="col-sm-4">
+	  <h3>Basic</h3>
+	  <ul>
+	    <li>Benefit 1</li>
+	    <li>Benefit 2</li>
+	    <li>Benefit 3</li>
+	  </ul>
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		  <input type="hidden" name="cmd" value="_xclick">
+		  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
+		  <input type="hidden" name="currency_code" value="USD">
+		  <input type="hidden" name="item_name" value="CDL Basic Package">
+		  <input type="hidden" name="amount" value="27">
+		  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success">
+		  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
+		  <input type="hidden" name="invoice" value="basic">
+		  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
+		</form>
+	</div>
+
+	<div class="col-sm-4">
+	  <h3>Premium</h3>
+	  <ul>
+	    <li>Benefit 1</li>
+	    <li>Benefit 2</li>
+	    <li>Benefit 3</li>
+	  </ul>
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		  <input type="hidden" name="cmd" value="_xclick">
+		  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
+		  <input type="hidden" name="currency_code" value="USD">
+		  <input type="hidden" name="item_name" value="CDL Premium Package">
+		  <input type="hidden" name="amount" value="47">
+		  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success_premium">
+		  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
+		  <input type="hidden" name="invoice" value="premium">
+		  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
+		</form>
+	</div>
+
+	<div class="col-sm-4">
+	  <h3>Ultimate</h3>
+	  <ul>
+	    <li>Benefit 1</li>
+	    <li>Benefit 2</li>
+	    <li>Benefit 3</li>
+	  </ul>
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		  <input type="hidden" name="cmd" value="_xclick">
+		  <input type="hidden" name="business" value="dannyjbaumann@gmail.com">
+		  <input type="hidden" name="currency_code" value="USD">
+		  <input type="hidden" name="item_name" value="CDL Ultimate Package">
+		  <input type="hidden" name="amount" value="77">
+		  <input type="hidden" name="return" value="https://cdlhq.herokuapp.com/success_ultimate">
+		  <input type="hidden" name="notify_url" value="https://cdlhq.herokuapp.com/payment_notifications/">
+		  <input type="hidden" name="invoice" value="ultimate">
+		  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
+		</form>
+	</div>
+</row>
