--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,29 +1,44 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, required: true %>
-  </div>
+<div class="form-horizontal home">
+  <fieldset>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.label :name, class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.text_field :name, autofocus: true, required: true, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, required: true %>
-  </div>
+      <div class="form-group">
+        <%= f.label :email, class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.email_field :email, required: true, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", required: true %>
-  </div>
+      <%= f.hidden_field :package, value: package %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
-  </div>
+      <div class="form-group">
+        <%= f.label :password, class: "col-md-4 control-label" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <div class="col-md-8">
+          <%= f.password_field :password, autocomplete: "off", required: true, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.password_field :password_confirmation, autocomplete: "off", required: true, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="col-md-8 col-md-offset-4">
+        <%= f.submit "LET ME IN", class: "btn btn-primary btn-block" %>
+      </div>
+
+    <% end %>
+  </fieldset>
+</div>
