--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome</h1>
+<%= render partial: "thanks" %>
 
-<div class="col-md-6 col-md-offset-3">
-	<%= render partial: "devise/registrations/form" %>
+<div class="col-md-8 col-md-offset-1">
+	<%= render partial: "devise/registrations/form", locals: { package: "regsies" } %>
 </div>
