Finish homepage design

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,14 +33,88 @@ html {
 }
 
 body {
-  margin-bottom: 20px;
+  margin-bottom: 200px;
   overflow-x: hidden;
   min-height: 300px;
   @media (max-width: 767px) and (min-width: 357px) {
-    margin-bottom: 460px;
+    margin-bottom: 225px;
   }  
+}
+
+a.navbar-brand {
+  &:hover, active {
+    color: #FFF !important;
+  }
+  @media (max-width: 490px) {
+    font-size: 16px;
+  }
+  @media (max-width: 430px) {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  @media (max-width: 392px) {
+    i {
+      display: none;
+    }
+    font-size: 14px;
+    padding-top: 22px;
+  }
+}
+.label-danger {
+  background-color: #A33 !important;
+}
+
+footer {
+  background-color: #5F7989;
+  bottom: 0;
+  height: 200px;
+  left: 0;
+  position: absolute;
+  right: 0;
+  width: 100%;
   @media (max-width: 356px) {
-    margin-bottom: 480px;
+    height: 220px;
+  }
+  a {
+    color: #FFF;
+    &:hover {
+      color: #FFF;
+      text-decoration: none;
+    }
+  }
+  img {
+    display: block;
+    margin: 20px auto;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0 auto;
+    padding-left: 0;
+    text-align: center;
+  }
+  li {
+    display: inline;
+    padding-right: 10px;
+  }
+  @media (max-width: 767px) and (min-width: 357px) {
+    height: 225px;    
+  } 
+}
+
+.navbar-default {
+  background-color: #5F7989;
+}
+
+a.btn.btn-danger.navbar-btn.order {
+  background-color: #aa3333;
+  border: 3px solid #FFF;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 5px 20px;
+  &:hover {
+    background-color: #962323;
   }
 }
 
