--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,130 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-image {
+	float: left;
+	margin-right: -80px;
+	padding-right: 20px;
+	@media (min-width: 1199px) {
+	  margin-left: 40px;
+	  margin-right: -140px;
+	}
+	@media (max-width: 767px) and (min-width: 681px) {
+	  margin-right: -40px;
+	}
+	@media (max-width: 680px) and (min-width: 661px) {
+	  margin-right: -30px;
+	}
+	@media (max-width: 660px) {
+	  display: block;
+	  float: none;
+	  margin: 0 auto;
+	}
+}
+
+h1.home {
+	color: #5F7989;
+  font-size: 24px;
+	font-weight: 900;
+	padding-top: 30px;
+	text-transform: uppercase;
+}
+.col-xxs-12 {
+	@media (max-width: 440px) {
+	  margin-left: 0 !important;
+	  width: 100% !important;
+	}
+}
+p.home-tagline {
+	color: #AA3333; 
+	font-size: 15px;
+	@media (max-width: 660px) {
+		text-align: center;
+	}
+}
+
+p.home-bullets {
+	color: #AA3333;
+	font-weight: bold;
+	font-size: 17px;
+	.home-bullet {
+	  color: #5F7989;
+	}
+}
+
+.guarantee {
+	background: #3a99d3;
+	margin: 20px auto 0 auto;
+	max-width: 650px;
+	min-height: 200px;
+	padding: 20px;
+	img {
+	  float: left;
+	  margin-right: 20px;
+	  padding-top: 20px;
+	  @media (max-width: 620px) {
+	    display: none;
+	  }
+	}
+	h2 {
+	  color: #FFF;
+	  font-size: 22px;
+	  font-weight: 900;
+	  text-transform: uppercase;
+	  @media (max-width: 355px) {
+	    margin-left: -15px;
+	  }
+	}
+	p {
+	  color: #FFF;
+	  font-size: 24px;
+	}
+}
+.home-main {
+	margin: 55px 0 55px 0;
+}
+.home-prices {
+  background: #dbdbdb;
+  color: #000;
+  padding: 5px;
+  overflow: auto;
+  a {
+    color: #3a99d3;
+    font-size: 24px;
+    @media (max-width: 440px) {
+      margin-bottom: 40px;
+    }
+  }
+  h2 {
+    font-weight: bold;
+    text-align: center;
+  }
+  h3 {
+    color: #302A2A;
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  h4 {
+    font-size: 24px;
+    margin-top: 0;
+  }
+  p {
+    margin-top: -10px;
+    @media (max-width: 440px) {
+      margin-bottom: -5px;
+    }
+  }
+  @media (max-width: 440px) {
+    .col-xs-2.col-xxs-12 {
+      margin-bottom: 20px;
+    }
+  }
+}
+.home-info {
+	h3 {
+	  color: #3a99d3;
+	  font-weight: bold;
+	}
+}
