--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,76 @@
-<h1>Welcome to CDL HQ</h1>
-<p>You're about to take control.</p>
+<div class="row text-center">
+  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 col-xxs-12">
+    <%= image_tag("cdl_logo.png", class: "main-image") %>
+    <h1 class="home">CDL Study Guide HQ</h1>
+    <p class="home-tagline">The Number #1 CDL Website</p>
+  </div>
+</div>
+
+<div class="row text-center">
+  <div class="col-md-12">
+    <p class="home-bullets">
+      Study Guides <span class="home-bullet">&#9679;</span> 
+      Practice Tests <span class="home-bullet">&#9679;</span> 
+      All Endorsements
+    </p>
+  </div>
+</div>
+
+<div class="row text-center">
+  <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xxs-12">
+    <div class="guarantee">
+	    <%= image_tag("guarantee.png") %>
+	    <h2>The CDLStudyGuideHQ.com<br/> Guarantee</h2>
+	    <p>If you don't pass your knowledge test, it's on us. We'll refund you 100%.</p>
+    </div>
+  </div>
+</div>
+
+<div class="row home-main"> 
+  <div class="col-md-1 col-hidden-xs"></div> 
+  <div class="col-md-5 col-md-push-5">
+    <div class="home-prices">
+	    <h2>Packages <span class="label label-danger">Best Deal</span></h2>
+	    <h3>Study Guides + Practice Tests</h3>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>Class A + All Endorsements</h4>
+		    <p>(Study Guide + 150 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$47</a></div>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>Class B + All Endorsements</h4>
+		    <p>(Study Guide + 100 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$47</a></div>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>Haz Mat (H)</h4>
+		    <p>(Study Guide + 50 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$17</a></div>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>Tanker (N)</h4>
+		    <p>(Study Guide + 50 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$17</a></div>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>Passenger (P)</h4>
+		    <p>(Study Guide + 50 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$17</a></div>
+	    <div class="col-xs-10 col-xxs-12">
+		    <h4>School Bus (S)</h4>
+		    <p>(Study Guide + 50 Practice Questions)</p>
+	    </div>
+	    <div class="col-xs-2 col-xxs-12"><a href="#">$17</a></div>
+	  </div>
+  </div>
+
+  <div class="col-md-5 col-md-pull-5">
+    <div class="home-info">
+      <h3>CDL Practice Tests</h3>
+      <p>If you are looking for CDL practice tests, you came to the right spot. Our Class A CDL test is unmatched in the industry. Our editors work hard every day to ensure that you are given the most most accurate and current CDL practice test questions available. Don't be fooled - this is not an easy exam. But with hard work, determination, and our proven method, you will pass.</p>
+      <h3>CDL Knowledge Test</h3>
+      <p>If you are looking for the ultimate CDL test online, look no further. CDLStudyGuideHQ.com is by far the best study resource on the market. It is no coincidence that our tests win the "CDL Pre-Test Resource" awards every year. If you are a looking for a free CDL test, we understand. Not everyone has the money to spend on testing resources. That is why we created our hardship program. If you qualify, we will send you a discount coupon to help you achieve your goals.</p>
+    </div>
+  </div>
+</div>
