--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -116,6 +116,9 @@ a.btn.btn-danger.navbar-btn.order {
   &:hover {
     background-color: #962323;
   }
+  @media (max-width: 767px) {
+    margin-left: 15px;
+  }
 }
 
 .highlighted {
