--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -128,3 +128,78 @@ p.home-bullets {
 	  font-weight: bold;
 	}
 }
+.pricing-row {
+	margin: 40px 0;
+}
+.pricing-table {
+  margin-left: 8%;
+  @media (max-width: 1199px) {
+    margin-left: 0;
+    margin-right: -10%;
+  }
+  @media (max-width: 630px) {
+    margin: 0;
+  }
+}
+.pricing-table ul{ 
+  border-radius: 3px; 
+  margin: 3px; 
+  width: 30%; 
+  text-align: center; 
+  list-style: none; 
+  float: left; 
+  padding: 0px; 
+  background-color: #FFFFFF;
+  @media (max-width: 630px) {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+} 
+.pricing-table ul li{ 
+  padding: 15px; 
+  background-color: #F9F9F9; 
+  border-width: 2px; 
+  border-color: #B83737; 
+  border-radius: 0px; 
+  border-bottom-width: 2px; 
+  font-size: 16px; 
+} 
+.pricing-table ul .heading{ 
+  color: #FFFFFF; 
+  background-color: #2C3E50; 
+  font-size: 22px; 
+} 
+.pricing-table ul .price{ 
+  font-size: 75px;
+  .dollar {
+    font-size: 18px;
+    position: relative;
+    bottom: 40px;
+  }
+} 
+.pricing-table ul .action{ 
+    font-size: 14px; 
+    color: #2A6496; 
+} 
+.feature{ 
+  -webkit-transform: scale(1.1); 
+  transform: scale(1.1); 
+  box-shadow: 0px 1px 20px 1px rgba(0,0,0,.5); 
+  @media (max-width: 630px) {
+    -webkit-transform: scale(1); 
+    transform: scale(1); 
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+  }
+} 
+.pricing-table .action a{ 
+    border-color: #B83737; 
+    border-width: 0px; 
+    border-radius: 2px; 
+    background-color: #EEEEEE; 
+    padding-top: 5px; 
+    padding-bottom: 5px; 
+    padding-left: 15px; 
+    padding-right: 15px; 
+    border-style: solid; 
+    color: #000000; 
+}
