Small change to user package type

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,5 +1,7 @@
 <h1>CDL Practice Tests</h1>
 
+<%= current_user.package %>
+
 <% if current_user.package == "ult932" %>
   <%= render partial: "ultimate" %>
 <% elsif current_user.package == "x16ty" %>
