--- a/app/views/pages/order.html.erb
+++ b/app/views/pages/order.html.erb
@@ -1,6 +1,8 @@
 <row>
 	<h1>Order Your CDL Study Guide Package Now</h1>
 
+<%= button_to "Order now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZTWRYCP37U2H8", class: "btn btn-primary" %>
+
 	<div class="col-sm-4">
 	  <h3>Basic</h3>
 	  <ul>
